[package]
name = "distributed_inspec_notifier"
version = "0.1.0"
authors = ["Lance Finfrock <lancewf@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.4.2"
serde = "1.0.97"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
bytes = "0.5.4"
serde_json = "1.0"
hyper = "*"
futures = "0.3"
